# cboe_pitch

./: .gitignore  README.md  generated_2025_02_08.pcap  generated_2025_02_09.pcap  generated_2025_02_09.txt  generated_2025_02_12.pcap  generated_2025_02_12.txt  generated_2025_05_02.pcap  generated_2025_05_02.txt  generated_2025_05_06.pcap  generated_2025_05_06.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  simple.cfg
cboe_pitch/: __init__.py  add_order.py  config.py  delete_order.py  file_parser.py  generator_main.py  message_factory.py  modify.py  order_executed.py  orderbook.py  parser_main.py  pitch24.py  player_main.py  reduce_size.py  seq_unit_header.py  time.py  trade.py
cboe_pitch/cmd/: generator_main.py  parser_main.py  player_main.py  receiver_main.py
examples/: gen_bats.py
pitch/: __init__.py  add_order.py  config.py  delete_order.py  file_parser.py  generator.py  generator_main.py  labview.py  message_factory.py  modify.py  order_executed.py  orderbook.py  parser_main.py  pitch24.py  reduce_size.py  seq_unit_header.py  time.py  trade.py  util.py
tests/: Pitch24Tests.py  comparator.py  test_add_order.py  test_config.py  test_delete.py  test_dpi.py  test_file_parser.py  test_generator.py  test_labview.py  test_modify.py  test_order_executed.py  test_orderbook.py  test_pitch24.py  test_reduce_size.py  test_seq_unit_header.py  test_time.py  test_trade.py
tests/data/: multi.dat.txt  single_seq.dat.txt
