[metadata]
name = cboe_pitch
description = Library for parsing and creating PITCH messages
classifiers = Programming Language :: Python
version=0.0.4

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    generator = pitch.generator_main:main
    parser = pitch.parser_main:main
