[metadata]
name = cboe_pitch
description = Library for parsing and creating PITCH messages
classifiers = Programming Language :: Python
version=0.0.9


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    prettytable
    scapy

[options.entry_points]
console_scripts =
    generator = cboe_pitch.cmd.generator_main:main
    parser = cboe_pitch.cmd.parser_main:main
    player = cboe_pitch.cmd.player_main:main
    receiver = cboe_pitch.cmd.receiver_main:main
